--- a/index.html
+++ b/index.html
@@ -102,27 +102,17 @@
         <div class="card">
           <h2>Set Highlights</h2>
           <ul class="list">
-            <li>Roll in My Sweet Baby's Arms</li>
+            <li>Will the Circle Be Unbroken</li>
             <li>Wagon Wheel</li>
-            <li>Shady Grove</li>
+            <li>Angel Band</li>
             <li>I'll Fly Away</li>
-            <li>Folsom Prison Blues</li>
+            <li>Ashokan Farewell</li>
           </ul>
         </div>
       </div>
     </section>
 
-    <section id="shows">
-      <div class="wrap">
-        <h2>Upcoming Shows</h2>
-        <div class="card">
-          <ul class="list" id="showsList">
-            <li><strong>Sep 14, 2025</strong> — Barn Dance @ Goose Creek Farm, Middleburg, VA — 7:00–9:00pm</li>
-            <li><strong>Oct 3, 2025</strong> — Cidery Night @ Blue Ridge Cider, Bluemont, VA — 6:00–8:30pm</li>
-          </ul>
-        </div>
-      </div>
-    </section>
+
 
     <section id="about">
       <div class="wrap two-col">
