--- a/index.html
+++ b/index.html
@@ -74,9 +74,10 @@
         <div class="card">
           <h2>Set Highlights</h2>
           <ul class="list">
-            <li>Shady Grove</li>
+            <li>Will the Circle Be Unbroken</li>
             <li>I'll Fly Away</li>
-            <li>Folsom Prison Blues</li>
+            <li>Ashokan Farewell</li>
+             <li>Walkin' After Midnight</li>
           </ul>
         </div>
       </div>
