--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
           <div class="grid cols-2">
             <iframe src="https://www.youtube.com/embed/LZK_sZmWbCA?start=3380" title="Hoot & Holler — Live (starts at 56:20)"></iframe>
           </div>
+          <!-- Restored Facebook links section -->
+          <p style="color:var(--muted);margin-top:10px">
+            More clips:
+            <a href="https://www.facebook.com/share/v/16xJrvqA2s/" target="_blank" rel="noopener">Facebook Clip 1</a> ·
+            <a href="https://www.facebook.com/share/p/19Pi1hZkyL/" target="_blank" rel="noopener">Facebook Clip 2</a>
+          </p>
         </div>
         <div class="card">
           <h2>Set Highlights</h2>
@@ -77,7 +83,7 @@
             <li>Will the Circle Be Unbroken</li>
             <li>I'll Fly Away</li>
             <li>Ashokan Farewell</li>
-             <li>Walkin' After Midnight</li>
+            <li>Walkin' After Midnight</li>
           </ul>
         </div>
       </div>
