--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="wrap">
         <span class="pill">Bluegrass • Folk • Traditional • Country</span>
         <h1>Toe‑tappin' tunes from Virginia's Piedmont</h1>
-        <p>We play front‑porch classics and festival favorites—tight harmonies, driving rhythms, and songs you can sing along to.</p>
+        <p>We play front‑porch classics and festival favorites—familiar melodies, family favorites, and songs you can sing along to.</p>
         <div class="cta">
           <a class="btn primary" href="#book">Book the band</a>
           <a class="btn" href="#music">Hear a sample</a>
