--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
             <li>I'll Fly Away</li>
             <li>Ashokan Farewell</li>
             <li>Walkin' After Midnight</li>
+            <li>Country Roads</li>
+            <li>Angel Band</li>
           </ul>
         </div>
       </div>
